// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Operations adds an action to the files 1`] = `Array []`;

exports[`File Operations adds an action to the files 2`] = `Array []`;

exports[`File Operations adds an action to the files 3`] = `Array []`;

exports[`File Operations adds an action to the files 4`] = `Array []`;

exports[`File Operations adds an action to the files 5`] = `
Array [
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
]
`;

exports[`File Operations adds an action to the files 6`] = `
Array [
  Array [
    "/tmp",
  ],
  Array [
    "/tmp",
  ],
  Array [
    "/tmp",
  ],
]
`;

exports[`File Operations adds an action to the files 7`] = `
Array [
  Array [
    "/tmp",
  ],
]
`;

exports[`File Operations adds multiple actions to the files 1`] = `
Array [
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testOne",
      "constant": "TEST_ONE",
    },
    Object {
      "insertHelper": true,
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testOne",
      "constant": "TEST_ONE",
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
    Object {
      "insertHelper": true,
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
    Object {
      "insertHelper": true,
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
  ],
]
`;

exports[`File Operations adds multiple actions to the files 2`] = `
Array [
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testOne",
      "constant": "TEST_ONE",
    },
    "/tmp",
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
    "/tmp",
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
    "/tmp",
  ],
]
`;

exports[`File Operations adds multiple actions to the files 3`] = `
Array [
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testOne",
      "constant": "TEST_ONE",
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
  ],
]
`;

exports[`File Operations adds multiple actions to the files 4`] = `
Array [
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testOne",
      "constant": "TEST_ONE",
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
  ],
  Array [
    Object {
      "comments": null,
      "loc": Object {
        "end": Object {
          "column": 0,
          "line": 1,
        },
        "indent": 0,
        "lines": Lines {},
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": null,
      "needsParens": false,
      "program": Program {
        "body": Array [],
        "errors": Array [],
        "loc": Object {
          "end": Object {
            "column": 0,
            "line": 1,
          },
          "indent": 0,
          "lines": Lines {},
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "needsParens": false,
        "sourceType": "module",
        "type": "Program",
      },
      "type": "File",
    },
    Object {
      "camel": "testName",
      "constant": "TEST_NAME",
    },
  ],
]
`;

exports[`File Operations adds multiple actions to the files 5`] = `
Array [
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
]
`;

exports[`File Operations adds multiple actions to the files 6`] = `
Array [
  Array [
    "/tmp",
  ],
  Array [
    "/tmp",
  ],
  Array [
    "/tmp",
  ],
]
`;

exports[`File Operations adds multiple actions to the files 7`] = `
Array [
  Array [
    "/tmp",
  ],
]
`;

exports[`File Operations creates files that are not preset 1`] = `Array []`;

exports[`File Operations creates files that are not preset 2`] = `Array []`;

exports[`File Operations creates files that are not preset 3`] = `Array []`;

exports[`File Operations creates files that are not preset 4`] = `Array []`;

exports[`File Operations creates files that are not preset 5`] = `
Array [
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
  Array [
    "/tmp",
    "",
  ],
]
`;

exports[`File Operations creates files that are not preset 6`] = `
Array [
  Array [
    "../assets/reducer.js",
  ],
  Array [
    "/tmp",
  ],
  Array [
    "/tmp",
  ],
  Array [
    "/tmp",
  ],
]
`;

exports[`File Operations creates files that are not preset 7`] = `
Array [
  Array [
    "/tmp",
  ],
]
`;
